# opengl-worlds-lecture

./: CMakeLists.txt  main.c  notes.txt
res/: blit.fsh  blur.fsh  circle.fsh  circle.vsh  frag.fsh  halftone.fsh  mod.vsh  mod_light.fsh  mod_norm.fsh  post.vsh  rect.fsh  rect.vsh  to_cmyk.fsh
src/: app.c  app.h  arr.c  arr.h  err.h  gl.c  gl.h  map.c  map.h  typedefs.h  world.c  world.h
src/lib/glad/: glad.c  glad.h  khrplatform.h
src/lib/glfw/include/GLFW/: glfw3.h  glfw3native.h
src/lib/glfw/src/: CMakeLists.txt  context.c  egl_context.c  egl_context.h  init.c  input.c  internal.h  mappings.h  monitor.c  osmesa_context.c  osmesa_context.h  vulkan.c  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  win32_joystick.h  win32_monitor.c  win32_platform.h  win32_thread.c  win32_time.c  win32_window.c  window.c
src/lib/simplex/: FastNoiseLite.h
